<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.medicalsurvey.formselection.FormSelectionViewModel" />

    </data>


    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context="com.medicalsurvey.formselection.FormSelectionFragment">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.constraint.Guideline
                    android:id="@+id/gl_vertical_95"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent=".95" />

                <android.support.constraint.Guideline
                    android:id="@+id/gl_vertical_05"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent=".05" />

                <android.support.constraint.Guideline
                    android:id="@+id/gl_vertical_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent=".4" />

                <android.support.constraint.Guideline
                    android:id="@+id/gl_vertical_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent=".6" />

                <android.support.constraint.Guideline
                    android:id="@+id/gl_horizontal_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent=".1" />

                <android.support.constraint.Guideline
                    android:id="@+id/gl_horizontal_9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent=".8" />

                <TextView
                    android:id="@+id/title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:text="@string/edc_set_up"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@+id/gl_horizontal_1"
                    app:layout_constraintEnd_toStartOf="@+id/gl_vertical_95"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/gl_vertical_05"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.6" />


                <android.support.v7.widget.CardView
                    android:id="@+id/cv_info"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/title"
                    android:paddingBottom="@dimen/dp8"
                    android:paddingEnd="@dimen/dp12"
                    android:paddingStart="@dimen/dp12"
                    android:paddingTop="@dimen/dp8"
                    app:cardCornerRadius="@dimen/dp16"
                    app:layout_constraintEnd_toStartOf="@+id/gl_vertical_95"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/gl_vertical_05"
                    app:layout_constraintTop_toBottomOf="@+id/gl_horizontal_1">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dp12"
                        android:orientation="vertical">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp4"
                            android:textColorHint="@android:color/black">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/et_study_number"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/study_number"
                                android:imeOptions="actionNext"
                                android:singleLine="true"
                                android:textColor="@color/colorPrimary"
                                android:textColorHint="@android:color/black" />

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp4"
                            android:textColorHint="@android:color/black">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/et_site_number"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/site_number"
                                android:imeOptions="actionNext"
                                android:singleLine="true"
                                android:textColor="@color/colorPrimary"
                                android:textColorHint="@android:color/black" />

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp4"
                            android:textColorHint="@android:color/black">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/et_site_staff_number"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/site_staff_number"
                                android:imeOptions="actionNext"
                                android:singleLine="true"
                                android:textColor="@color/colorPrimary"
                                android:textColorHint="@android:color/black" />

                        </android.support.design.widget.TextInputLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp4"
                            android:text="@string/questionnaire_selection"
                            android:textColor="@android:color/black"
                            android:textSize="16sp" />

                        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/rb_pre"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="false"
                                android:text="@string/pre"
                                android:textStyle="bold" />

                            <RadioButton
                                android:id="@+id/rb_post"
                                android:textStyle="bold"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="false"
                                android:text="@string/post" />
                        </RadioGroup>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp4"
                            android:hint="@string/visit_selection"
                            android:textColorHint="@android:color/black">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/et_visit_selection"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:imeOptions="actionNext"
                                android:singleLine="true"
                                android:textColor="@color/colorPrimary"
                                android:textColorHint="@android:color/black" />

                        </android.support.design.widget.TextInputLayout>


                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp4"
                            android:textColorHint="@android:color/black">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/et_patient_id"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/patient_id"
                                android:imeOptions="actionDone"
                                android:singleLine="true"
                                android:textColor="@color/colorPrimary"
                                android:textColorHint="@android:color/black" />

                        </android.support.design.widget.TextInputLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:baselineAligned="false"
                            android:orientation="horizontal">

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/dp4"
                                android:layout_weight="1"
                                android:textColorHint="@android:color/black">

                                <android.support.design.widget.TextInputEditText
                                    android:id="@+id/et_date"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:focusable="false"
                                    android:focusableInTouchMode="false"
                                    android:hint="@string/date"
                                    android:singleLine="true"
                                    android:textColor="@color/colorPrimary"
                                    android:textColorHint="@android:color/black" />

                            </android.support.design.widget.TextInputLayout>

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/dp4"
                                android:layout_weight="1"
                                android:textColorHint="@android:color/black">

                                <android.support.design.widget.TextInputEditText
                                    android:id="@+id/et_time"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:focusable="false"
                                    android:focusableInTouchMode="false"
                                    android:hint="@string/time"
                                    android:singleLine="true"
                                    android:textColor="@color/colorPrimary"
                                    android:textColorHint="@android:color/black" />

                            </android.support.design.widget.TextInputLayout>

                        </LinearLayout>

                    </LinearLayout>
                </android.support.v7.widget.CardView>


                <Button
                    android:id="@+id/btn_next"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp24"
                    android:background="@drawable/bg_white_button"
                    android:drawableEnd="@drawable/ic_forward"
                    android:drawablePadding="@dimen/dp8"
                    android:gravity="center"
                    android:text="@string/next"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/gl_vertical_6"
                    app:layout_constraintStart_toStartOf="@+id/gl_vertical_4"
                    app:layout_constraintTop_toBottomOf="@+id/cv_info" />
            </android.support.constraint.ConstraintLayout>


        </android.support.v4.widget.NestedScrollView>


    </android.support.design.widget.CoordinatorLayout>

</layout>